Add raw path for EU27 files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
           "Industry/Results_per_Country/2040_DK.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/2040_DK.csv" }, 
           "Industry/Results_per_Country/2050_DK.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/2050_DK.csv" }, 
 
+          "Industry/Results_per_Country/2030_EU27.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/2030_EU27.csv" }, 
+          "Industry/Results_per_Country/2040_EU27.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/2040_EU27.csv" }, 
+          "Industry/Results_per_Country/2050_EU27.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/2050_EU27.csv" }, 
+          
           "Outputs/PtX_demand_DK.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/PtX_demand_DK.csv" }, 
+          "Outputs/PtX_demand_EU27.csv": { url: "https://raw.githubusercontent.com/math009/stlite_test/refs/heads/main/PtX_demand_EU27.csv" }, 
 
           "dashboard_final.py": `
 import streamlit as st
